[package]
name = "phoenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.4.3"
snow = "0.9.0"
clap = { version = "3.2.12", features = ["derive"] }
toml = "0.5.9"
base64 = "0.13.0"
