[package]
name = "phoenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.4.3"
snow = "0.9.0"
clap = { version = "3.2.12", features = ["derive"] }
toml = "0.5.9"
notify = { version = "4.0.17", default-features = false }
log = "0.4.17"
env_logger = "0.9.0"
base64ct = { version = "1.5.1", features = ["alloc"] }
base16ct = { version = "0.1.1", features = ["alloc"] }
blake3 = "1.3.1"
tokio = { version = "1.24.2", features = ["full"] }
async-trait = "0.1.58"

[dev-dependencies]
pretty_assertions = "1.3.0"
